creacion ruta de update para editar

--- a/views/editArticle.ejs
+++ b/views/editArticle.ejs
@@ -22,14 +22,14 @@
           <h3 class="text-muted">Edit article</h3>
         </div>
         <hr />
-        <form method="post" action="/articles">
+        <form method="post" action="/articulos/editar/<%=article.dataValues.id%>">
           <label for="title" class="mb-2 text-muted fw-bold">Title</label>
           <input
             type="text"
             id="title"
             name="title"
             class="form-control mb-2"
-            value="<%= articles.dataValues.title%>"
+            value="<%= article.dataValues.title%>"
           />
           <label for="content" class="mb-2 text-muted fw-bold">Content</label>
           <textarea
@@ -37,15 +37,17 @@
             id="content"
             name="content"
             class="form-control mb-2"
-            value="<%= articles.dataValues.content %>"
-          ></textarea>
+            style="resize: none; height: 300px"
+          >
+<%= article.dataValues.content %></textarea
+          >
           <label for="author" class="mb-2 text-muted fw-bold">Author (Id)</label>
           <input
             type="text"
             id="author"
             name="author"
             class="form-control mb-3"
-            value="<%= articles.author_id %>"
+            value="<%= article.dataValues.user.firstname %> <%= article.dataValues.user.lastname %>"
           />
 
           <label for="image" class="mb-2 text-muted fw-bold">Image</label>
@@ -55,7 +57,7 @@
         </form>
       </div>
       <div class="ms-5">
-        <a class="ms-4" href="/index.html">Return</a>
+        <a class="ms-4" href="/admin">Return</a>
       </div>
     </div>
 
