--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -60,7 +60,7 @@
         </form>
       </div>
       <div class="ms-5">
-        <a class="ms-4" href="">Return</a>
+        <a class="ms-4" href="/">Return</a>
       </div>
     </div>
 
