controlador destroy creado

--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -22,7 +22,7 @@
           <h3 class="text-muted">Add new article</h3>
         </div>
         <hr />
-        <form method="post" action="/articles">
+        <form method="post" action="/articulos">
           <label for="title" class="mb-2 text-muted fw-bold">Title</label>
           <input
             autofocus
@@ -44,7 +44,7 @@
           <input
             type="text"
             id="author"
-            name="author"
+            name="user"
             class="form-control mb-2"
             placeholder="Enter author_id.."
           />
