--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -45,7 +45,9 @@
               <a href="/articulos/editar/<%=article.dataValues.id%>" class="btn btn-primary"
                 >Editar</a
               >
-              <a type="button" href="/" class="btn btn-danger">Eliminar</a>
+              <a href="/articulos/delete/<%=article.dataValues.id%>" class="btn btn-danger"
+                >Eliminar</a
+              >
             </td>
           </tr>
           <%}%>
