--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/article.css" type="text/css" />
-    <script src="https://kit.fontawesome.com/69dcecacbf.js" crossorigin="anonymous"></script>
-  </head>
 
-  <body>
-    <%- include("./partials/navbar.ejs") %>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/article.css" type="text/css" />
+  <script src="https://kit.fontawesome.com/69dcecacbf.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <%- include("./partials/navbar.ejs") %>
 
     <div class="jumbotron">
       <div class="container text-center">
-        <h1 class="fs-1 text-white fw-bold"><%= article.dataValues.title %></h1>
+        <h1 class="fs-1 text-white fw-bold">
+          <%= article.dataValues.title %>
+        </h1>
         <p class="fs-6 text-white-50">Creado por</p>
       </div>
     </div>
@@ -28,7 +27,9 @@
     <div class="container mt-4">
       <div class="row d-flex flex-column align-items-center">
         <div class="col-7">
-          <p><%= article.content %></p>
+          <p>
+            <%= article.content %>
+          </p>
         </div>
 
         <div class="col-7 pt-2 pb-4">
@@ -36,29 +37,18 @@
         </div>
 
         <div class="col-7">
-          <form action="/article" method="post">
+          <form action="/comentarios/article/:id" method="post">
             <h4>Add your comment</h4>
             <div class="form-group">
               <label for="nameInput"></label>
-              <input
-                type="text"
-                class="form-control"
-                id="nameInput"
-                placeholder="Name"
-                name="name"
-              />
+              <input type="text" class="form-control" id="nameInput" placeholder="Name" name="name" />
             </div>
             <div class="form-group">
               <label for="commentTextArea"></label>
-              <textarea
-                class="form-control"
-                id="commentTextArea"
-                rows="4"
-                name="comment"
-              ></textarea>
+              <textarea class="form-control" id="commentTextArea" rows="4" name="comment"></textarea>
             </div>
             <div id="button" class="d-grid gap-2 mt-4">
-              <button class="btn btn-primary p-0" type="button">Send</button>
+              <button class="btn btn-primary p-0" type="submit">Send</button>
             </div>
           </form>
         </div>
@@ -100,5 +90,6 @@
         <small>Copyright © Hack Academy 2023</small>
       </div>
     </footer>
-  </body>
+</body>
+
 </html>
