--- a/views/article.ejs
+++ b/views/article.ejs
@@ -37,7 +37,7 @@
         </div>
 
         <div class="col-7">
-          <form action="/comentarios/article/:id" method="post">
+          <form action="/comentarios/article/<%= article.id %>" method="post">
             <h4>Add your comment</h4>
             <div class="form-group">
               <label for="nameInput"></label>
