--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-dark bg-dark">
   <div class="container justify-content-around">
-    <a class="navbar-brand fs-5 fw-bold">Hack the blog</a>
+    <a class="navbar-brand fs-5 fw-bold" href="/">Hack the blog</a>
+    <div>
+    <a class="btn btn-success" href="/registro">Register</a>
     <a class="btn btn-primary" href="/admin">Admin</a>
+  </div>
   </div>
 </nav>
