--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
               />
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-              <form action="/login" method="post" >
+              <form action="/admin/login" method="post" >
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                   <input
