funcionando con logout

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
     <a class="navbar-brand fs-5 fw-bold" href="/">Hack the blog</a>
     <div>
       <a class="btn btn-success" href="/registro">Register</a>
-      <a class="btn btn-danger" href="/login">Login</a>
+      <a class="btn btn-danger" href="/admin/logout">Logout</a>
       <a class="btn btn-primary" href="/admin">Admin</a>
     </div>
   </div>
