--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/article.css" type="text/css" />
+    <script src="https://kit.fontawesome.com/69dcecacbf.js" crossorigin="anonymous"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/article.css" type="text/css" />
-  <script src="https://kit.fontawesome.com/69dcecacbf.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <%- include("./partials/navbar.ejs") %>
+  <body>
+    <%- include("./partials/navbar.ejs") %>
 
     <div class="jumbotron">
       <div class="container text-center">
-        <h1 class="fs-1 text-white fw-bold">
-          <%= article.dataValues.title %>
-        </h1>
-        <p class="fs-6 text-white-50">Creado por</p>
+        <h1 class="fs-1 text-white fw-bold"><%= article.dataValues.title %></h1>
+        <p class="fs-6 text-white-50">
+          Creado por <%= article.user.firstname+' '+article.user.lastname %>
+        </p>
       </div>
     </div>
 
     <div class="container mt-4">
       <div class="row d-flex flex-column align-items-center">
         <div class="col-7">
-          <p>
-            <%= article.content %>
-          </p>
+          <p><%= article.content %></p>
         </div>
 
         <div class="col-7 pt-2 pb-4">
@@ -37,15 +38,17 @@
         </div>
 
         <div class="col-7">
-          <form action="/comentarios/article/<%= article.id %>" method="post">
+          <form action="/comentarios/<%= article.id %>/article" method="post">
             <h4>Add your comment</h4>
             <div class="form-group">
-              <label for="nameInput"></label>
-              <input type="text" class="form-control" id="nameInput" placeholder="Name" name="name" />
-            </div>
-            <div class="form-group">
               <label for="commentTextArea"></label>
-              <textarea class="form-control" id="commentTextArea" rows="4" name="comment"></textarea>
+              <textarea
+                required
+                class="form-control"
+                id="commentTextArea"
+                rows="4"
+                name="comment"
+              ></textarea>
             </div>
             <div id="button" class="d-grid gap-2 mt-4">
               <button class="btn btn-primary p-0" type="submit">Send</button>
@@ -54,26 +57,14 @@
         </div>
 
         <div id="comments" class="col-7">
-          <h4>Comments (x)</h4>
-          <div class="comment mt-3 mb-3">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta soluta iusto illum quo,
-              asperiores alias rem numquam eaque id fuga tempora odit tenetur aspernatur? Sint autem
-              eius inventore facilis porro.
-            </p>
-            <small>Author's name</small>
-          </div>
+          <h4>Comments <%= comments.length %></h4>
+          <% for (const comment of comments) {%>
+          <p><%= comment.comment %></p>
+          <small><%= comment.firstname +' '+ comment.lastname %></small>
 
           <hr />
 
-          <div class="comment mt-3 mb-3">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta soluta iusto illum quo,
-              asperiores alias rem numquam eaque id fuga tempora odit tenetur aspernatur? Sint autem
-              eius inventore facilis porro.
-            </p>
-            <small>Author's name</small>
-          </div>
+          <%} %>
         </div>
       </div>
     </div>
@@ -90,6 +81,5 @@
         <small>Copyright © Hack Academy 2023</small>
       </div>
     </footer>
-</body>
-
+  </body>
 </html>
