--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-</head>
-
-<body>
-  <%- include("./partials/navbar.ejs") %>
+  <body>
+    <%- include("./partials/navbar.ejs") %>
 
     <div class="container">
       <div class="shadow rounded m-5 p-4" id="contenedor">
@@ -21,12 +24,22 @@
         <hr />
         <form method="post" enctype="multipart/form-data" action="/articulos/crear/new">
           <label for="title" class="mb-2 text-muted fw-bold">Title</label>
-          <input autofocus type="text" id="title" name="title" class="form-control mb-2" placeholder="Enter title.." />
+          <input
+            autofocus
+            type="text"
+            id="title"
+            name="title"
+            class="form-control mb-2"
+            placeholder="Enter title.."
+          />
           <label for="content" class="mb-2 text-muted fw-bold">Content</label>
-          <textarea type="text" id="content" name="content" class="form-control mb-2"
-            placeholder="Enter content.."></textarea>
-          <label for="author" class="mb-2 text-muted fw-bold">Author (Id)</label>
-          <input type="text" id="author" name="author" class="form-control mb-3" placeholder="Enter author_id.." />
+          <textarea
+            type="text"
+            id="content"
+            name="content"
+            class="form-control mb-2"
+            placeholder="Enter content.."
+          ></textarea>
           <label for="image" class="mb-2 text-muted fw-bold">Image</label>
           <input type="file" id="image" name="image" class="form-control-file mb-4" />
           <br />
@@ -38,9 +51,10 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
-</body>
-
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
