--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
         <a id="article-headers" href="/articulos/<%=article.id%>"> <%= article.title %> </a>
       </div>
       <small>
-        Creado por <%= article.user.firstname %> <%= article.user.lastname %> el <%= format(
+        Created by <%= article.user.firstname %> <%= article.user.lastname %> on <%= format(
         article.createdAt, 'do MMMM, yyyy')%>
       </small>
     </div>
