--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -34,15 +34,15 @@
         <tbody>
           <% for (article of articles) { %>
 
-          <tr>
+          <tr class="border-bottom">
             <th scope="row"><%=article.dataValues.id%></th>
             <td><%=article.dataValues.title%></td>
             <td><%=article.dataValues.content.slice(0, 150) + "..."%></td>
-            <td><img src="/img/<%=article.dataValues.image%>" /></td>
+            <td><img src="/img/<%=article.dataValues.image%>" class="img-fluid"/></td>
             <td><%=article.createdAt%></td>
             <td><%=article.user.firstname%> <%=article.user.lastname%></td>
-            <td>
-              <a href="/articulos/editar/<%=article.dataValues.id%>" class="btn btn-primary"
+            <td class="d-flex">
+              <a href="/articulos/editar/<%=article.dataValues.id%>" class="btn btn-primary me-2"
                 >Editar</a
               >
               <a href="/articulos/delete/<%=article.dataValues.id%>" class="btn btn-danger"
