--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,9 +14,14 @@
   </head>
 
   <body>
-    <%- include("./partials/navbar.ejs") %> <% if (messages.error) { %>
-    <div class="alert alert-danger"><%= messages.error %></div>
+    <%- include("./partials/navbar.ejs") %> 
+    
+    <% if (messages.error) { %>
+    <div class="alert alert-danger">
+      <%= messages.error %>
+    </div>
     <% } %>
+
     <section class="vh-100" style="background-color: #eee">
       <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -45,7 +50,7 @@
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
-                          <input type="text" id="lastname" name="lastname" class="form-control" />
+                          <input type="text" id="lastname" name="lastname" required class="form-control" />
                           <label class="form-label" for="lastname">Your Lastname</label>
                         </div>
                       </div>
@@ -70,6 +75,7 @@
                           <input
                             type="password"
                             id="password"
+                            required
                             name="password"
                             class="form-control"
                           />
