--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%- include("./partials/navbar.ejs") %>
+    <%- include("./partials/navbarPriv.ejs") %>
     <div class="conatiner mWidth">
       <h2>Articles</h2>
       <a href="/articulos/crear" class="btn btn-success">Nuevo</a>
@@ -38,7 +38,7 @@
             <th scope="row"><%=article.dataValues.id%></th>
             <td><%=article.dataValues.title%></td>
             <td><%=article.dataValues.content.slice(0, 150) + "..."%></td>
-            <td><img src="/img/<%=article.dataValues.image%>" class="img-fluid"/></td>
+            <td><img src="/img/<%=article.dataValues.image%>" class="img-fluid" /></td>
             <td><%=article.createdAt%></td>
             <td><%=article.user.firstname%> <%=article.user.lastname%></td>
             <td class="d-flex">
