--- a/views/article.ejs
+++ b/views/article.ejs
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <%- include("./partials/navbar.ejs") %>
+    <%- include("./partials/navbarPriv.ejs") %>
 
     <div class="jumbotron">
       <div class="container text-center">
@@ -29,7 +29,7 @@
 
     <div class="container mt-4">
       <div class="row d-flex flex-column align-items-center">
-        <div class="col-7">
+        <div>
           <p><%= article.content %></p>
         </div>
 
