--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <%- include("./partials/navbar.ejs") %>
+    <%- include("./partials/navbarInLog.ejs") %>
     <% if (messages.error) { %>
       <div class="alert alert-danger">
         <%= messages.error %>
