--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,8 +2,8 @@
   <div class="container justify-content-around">
     <a class="navbar-brand fs-5 fw-bold" href="/">Hack the blog</a>
     <div>
+      <a class="btn btn-primary" href="/login">Login</a>
       <a class="btn btn-success" href="/registro">Register</a>
-      <a class="btn btn-danger" href="/login">Login</a>
     </div>
   </div>
 </nav>
