--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,12 +14,8 @@
   </head>
 
   <body>
-    <%- include("./partials/navbar.ejs") %> 
-    
-    <% if (messages.error) { %>
-    <div class="alert alert-danger">
-      <%= messages.error %>
-    </div>
+    <%- include("./partials/navbarInLog.ejs") %> <% if (messages.error) { %>
+    <div class="alert alert-danger"><%= messages.error %></div>
     <% } %>
 
     <section class="vh-100" style="background-color: #eee">
@@ -50,7 +46,13 @@
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
-                          <input type="text" id="lastname" name="lastname" required class="form-control" />
+                          <input
+                            type="text"
+                            id="lastname"
+                            name="lastname"
+                            required
+                            class="form-control"
+                          />
                           <label class="form-label" for="lastname">Your Lastname</label>
                         </div>
                       </div>
