navbar casi al 100%

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,7 @@
   </head>
 
   <body>
-    <%-user ? include("./partials/navbarPriv.ejs") : include("./partials/navbar.ejs") %> <%
-    console.log(user); %>
+    <%- include("./partials/navbar.ejs") %>
     <div class="jumbotron">
       <div class="container text-center">
         <h1 class="fs-1 text-white fw-bold">Hack the Blog</h1>
