--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%- include("./partials/navbarPriv.ejs") %>
+    <%- include("./partials/navbar.ejs") %>
     <div class="conatiner mWidth">
       <h2>Articles</h2>
       <a href="/articulos/crear" class="btn btn-success">Nuevo</a>
