--- a/views/article.ejs
+++ b/views/article.ejs
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <%- include("./partials/navbarPriv.ejs") %>
+    <%- include("./partials/navbar.ejs") %>
 
     <div class="jumbotron">
       <div class="container text-center">
@@ -30,7 +30,7 @@
     <div class="container mt-4">
       <div class="row d-flex flex-column align-items-center">
         <div>
-          <p><%= article.content %></p>
+          <p style="white-space: wrap"><%= article.content %></p>
         </div>
 
         <div class="col-7 pt-2 pb-4">
@@ -81,5 +81,10 @@
         <small>Copyright © Hack Academy 2023</small>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
