--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <%- include("./partials/navbarPriv.ejs") %>
+    <%- include("./partials/navbar.ejs") %>
 
     <div class="container">
       <div class="shadow rounded m-5 p-4" id="contenedor">
