--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,11 +17,12 @@
           <%=user.firstname+' '+user.lastname %>
         </button>
         <ul class="dropdown-menu">
-          <li><a href="/admin/logout" class="dropdown-item">Logout</a></li>
+          <li><a href="/admin" class="dropdown-item">Admin</a></li>
           <hr class="dropdown-divider" />
-          <li><a href="/admin" class="dropdown-item">Admin</a><%} %></li>
+          <li><a href="/admin/logout" class="dropdown-item">Logout</a></li>
         </ul>
       </div>
+      <%} %>
     </div>
   </div>
 </nav>
