--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,9 +14,12 @@
   </head>
 
   <body>
-    <%- include("./partials/navbarInLog.ejs") %> <% if (messages.error) { %>
-    <div class="alert alert-danger"><%= messages.error %></div>
-    <% } %>
+    <%- include("./partials/navbarInLog.ejs") %> 
+    <% if (messages.error || messages.falla) { %>
+      <div class="alert alert-danger">
+        <%= messages.error %> <%= messages.falla %>
+      </div>
+      <% } %>
 
     <section class="vh-100" style="background-color: #eee">
       <div class="container h-100">
@@ -38,6 +41,7 @@
                             required
                             name="firstname"
                             class="form-control"
+                            value="<%= messages.firstname %>"
                           />
                           <label class="form-label" for="firstname">Your Firstname</label>
                         </div>
@@ -52,6 +56,7 @@
                             name="lastname"
                             required
                             class="form-control"
+                            value="<%= messages.lastname %>"
                           />
                           <label class="form-label" for="lastname">Your Lastname</label>
                         </div>
@@ -69,6 +74,7 @@
                           />
                           <label class="form-label" for="email">Your Email</label>
                         </div>
+
                       </div>
 
                       <div class="d-flex flex-row align-items-center mb-4">
