--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -26,6 +26,7 @@
           <label for="title" class="mb-2 text-muted fw-bold">Title</label>
           <input
             autofocus
+            required
             type="text"
             id="title"
             name="title"
@@ -34,6 +35,7 @@
           />
           <label for="content" class="mb-2 text-muted fw-bold">Content</label>
           <textarea
+            required
             type="text"
             id="content"
             name="content"
