remodularizacion y isowner middleware

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,7 +18,7 @@
     <%- include("./partials/navbar.ejs") %>
     <div class="conatiner mWidth">
       <h2>Articles</h2>
-      <a href="/articulos/crear" class="btn btn-success">Nuevo</a>
+      <a href="/articulos/crear" class="btn btn-success">New</a>
       <table class="table">
         <thead>
           <tr>
@@ -54,7 +54,7 @@
         </tbody>
       </table>
     </div>
-
+    <%- include("partials/footer") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
