--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
     <div>
       <% if(!user) {%>
       <a class="btn btn-primary" href="/login">Login</a>
-      <a class="btn btn-success" href="/registro">Register</a>
+      <a class="btn btn-success" href="/usuarios/crear">Register</a>
       <% } else { %>
       <div class="dropdown">
         <button
