--- a/views/article.ejs
+++ b/views/article.ejs
@@ -22,7 +22,7 @@
       <div class="container text-center">
         <h1 class="fs-1 text-white fw-bold"><%= article.dataValues.title %></h1>
         <p class="fs-6 text-white-50">
-          Creado por <%= article.user.firstname+' '+article.user.lastname %>
+          Creted by <%= article.user.firstname+' '+article.user.lastname %>
         </p>
       </div>
     </div>
@@ -30,7 +30,7 @@
     <div class="container mt-4">
       <div class="row d-flex flex-column align-items-center">
         <div>
-          <p style="white-space: wrap"><%= article.content %></p>
+          <p><%= article.content %></p>
         </div>
 
         <div class="col-7 pt-2 pb-4">
@@ -68,19 +68,7 @@
         </div>
       </div>
     </div>
-
-    <footer>
-      <hr />
-
-      <div class="d-flex flex-column align-items-center mt-4 pt-4">
-        <div class="d-flex flex-row justify-content-center">
-          <i class="fa-brands fa-square-twitter m-1 mb-2" style="color: #000000"></i>
-          <i class="fa-brands fa-square-github m-1 mb-2" style="color: #000000"></i>
-          <i class="fa-brands fa-square-facebook m-1 mb-2" style="color: #000000"></i>
-        </div>
-        <small>Copyright © Hack Academy 2023</small>
-      </div>
-    </footer>
+    <%- include("partials/footer") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
