--- a/views/editArticle.ejs
+++ b/views/editArticle.ejs
@@ -64,7 +64,7 @@
         <a class="ms-4" href="/admin">Return</a>
       </div>
     </div>
-
+    <%- include("partials/footer") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
