--- a/views/newArticle.ejs
+++ b/views/newArticle.ejs
@@ -22,7 +22,7 @@
           <h3 class="text-muted">Add new article</h3>
         </div>
         <hr />
-        <form method="post" enctype="multipart/form-data" action="/articulos/crear/new">
+        <form method="post" enctype="multipart/form-data" action="/articulos/crear">
           <label for="title" class="mb-2 text-muted fw-bold">Title</label>
           <input
             autofocus
@@ -52,7 +52,7 @@
         <a class="ms-4" href="/admin">Return</a>
       </div>
     </div>
-
+    <%- include("partials/footer") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
