--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,13 +1,12 @@
 <footer>
-    <hr>
-    <div class="d-flex flex-column align-items-center mt-4 pt-4">
-        <div class="d-flex flex-row justify-content-center">
-            <i class="fa-brands fa-square-twitter m-1 mb-2" style="color: #000000;"></i>
-            <i class="fa-brands fa-square-github m-1 mb-2" style="color: #000000;"></i>
-            <i class="fa-brands fa-square-facebook m-1 mb-2" style="color: #000000;"></i>
-        </div>
-        <small>Copyright © Hack Academy 2023</small>
+  <hr />
+  <div class="d-flex flex-column align-items-center mt-4 pt-4">
+    <div class="d-flex flex-row justify-content-center">
+      <i class="fa-brands fa-square-twitter m-1 mb-2" style="color: #000000"></i>
+      <i class="fa-brands fa-square-github m-1 mb-2" style="color: #000000"></i>
+      <i class="fa-brands fa-square-facebook m-1 mb-2" style="color: #000000"></i>
     </div>
-
-
+    <small>Copyright © Hack Academy 2023</small>
+  </div>
 </footer>
+<script src="https://kit.fontawesome.com/69dcecacbf.js" crossorigin="anonymous"></script>
