--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,12 +14,9 @@
   </head>
 
   <body>
-    <%- include("./partials/navbarInLog.ejs") %> 
-    <% if (messages.error || messages.falla) { %>
-      <div class="alert alert-danger">
-        <%= messages.error %> <%= messages.falla %>
-      </div>
-      <% } %>
+    <%- include("./partials/navbarInLog.ejs") %> <% if (messages.error || messages.falla) { %>
+    <div class="alert alert-danger"><%= messages.error %> <%= messages.falla %></div>
+    <% } %>
 
     <section class="vh-100" style="background-color: #eee">
       <div class="container h-100">
@@ -31,7 +28,7 @@
                   <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                    <form class="mx-1 mx-md-4" action="/registro" method="POST">
+                    <form class="mx-1 mx-md-4" action="/usuarios" method="POST">
                       <div class="d-flex flex-row align-items-center mb-4">
                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                         <div class="form-outline flex-fill mb-0">
@@ -74,7 +71,6 @@
                           />
                           <label class="form-label" for="email">Your Email</label>
                         </div>
-
                       </div>
 
                       <div class="d-flex flex-row align-items-center mb-4">
@@ -112,7 +108,7 @@
         </div>
       </div>
     </section>
-
+    <%- include("partials/footer") %>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
