--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,7 +14,7 @@
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <%=user.firstname+' '+user.lastname %>
+          <%=user.firstname+' '+user.lastname %> - <%=user.role.role%>
         </button>
         <ul class="dropdown-menu">
           <li><a href="/admin" class="dropdown-item">Admin</a></li>
