--- a/views/editArticle.ejs
+++ b/views/editArticle.ejs
@@ -22,11 +22,7 @@
           <h3 class="text-muted">Edit article</h3>
         </div>
         <hr />
-        <form
-          method="post"
-          enctype="multipart/form-data"
-          action="/articulos/editar/<%=article.dataValues.id%>"
-        >
+        <form method="post" enctype="multipart/form-data" <%if(user.levelPermission>=3){%> action="/articulos/editar/<%=article.dataValues.id%>/editor" <% } else { %>action="/articulos/editar/<%=article.dataValues.id%>" <% }%> >
           <label for="title" class="mb-2 text-muted fw-bold">Title</label>
           <input
             type="text"
