--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,13 +16,22 @@
         >
           <%=user.firstname+' '+user.lastname %>
         </button>
-        <ul class="dropdown-menu">
-          <li><a href="/admin" class="dropdown-item">Admin</a></li>
-          <hr class="dropdown-divider" />
+        <ul class="dropdown-menu m-0 py-1">
+          <%if (user.levelPermission >= 2) {%>
+          <li>
+            <a href="/admin" disabeled class="dropdown-item">Admin</a>
+            <hr class="dropdown-divider" />
+          </li>
+          <%}%> <%if (user.levelPermission === 4) {%>
+          <li>
+            <a href="/admin/users" disabeled class="dropdown-item">Administracion de Usuarios</a>
+            <hr class="dropdown-divider" />
+          </li>
+          <%}%>
           <li><a href="/admin/logout" class="dropdown-item">Logout</a></li>
         </ul>
       </div>
-      <%} %>
+      <%}%>
     </div>
   </div>
 </nav>
