modify users funcionando

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,6 +18,7 @@
         </button>
         <ul class="dropdown-menu">
           <li><a href="/admin" class="dropdown-item">Admin</a></li>
+          <li><a href="/usuarios/<%=user.id%>" class="dropdown-item">Profile</a></li>
           <hr class="dropdown-divider" />
           <li><a href="/admin/logout" class="dropdown-item">Logout</a></li>
         </ul>
