--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -11,12 +11,88 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" type="text/css" />
+    <link rel="stylesheet" href="/css/profile.css" type="text/css" />
   </head>
 
   <body>
     <%- include("./partials/navbar.ejs") %>
 
+    <section class="vh-100 gradient-custom">
+      <div class="container py-5 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="col-12 col-lg-9 col-xl-7">
+            <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+              <div class="card-body p-4 p-md-5">
+                <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Edit Profile</h3>
+                <% if (messages.perms) { %>
+                  <div class="alert alert-danger"><%= messages.perms %></div>
+                  <% } %>
+                <form action="/usuarios/<%=user.id%>" method="POST">
+    
+                  <div class="row">
+                    <div class="col-md-6 mb-4">
+    
+                      <div class="form-outline">
+                        <input type="text" id="firstname" name="firstname" class="form-control form-control-lg" value="<%=user.firstname%>"/>
+                        <label class="form-label" for="firstname">First Name</label>
+                      </div>
+    
+                    </div>
+                    <div class="col-md-6 mb-4">
+    
+                      <div class="form-outline">
+                        <input type="text" id="lastname" name="lastname" class="form-control form-control-lg" value="<%=user.lastname%>"/>
+                        <label class="form-label" for="lastname">Last Name</label>
+                      </div>
+    
+                    </div>
+                  </div>
+    
+                  <div class="row">
+                    <div class="col-md-6 mb-4 d-flex align-items-center">
+    
+                      <div class="form-outline datepicker w-100">
+                        <input type="email" class="form-control form-control-lg" id="email" name="email" value="<%=user.email%>" />
+                        <label for="email" class="form-label">Email</label>
+                      </div>
+    
+                    </div>
+                  </div>
+    
+                  <div class="row">
+                    <div class="col-md-6 mb-4 pb-2">
+    
+                      <div class="form-outline">
+                        <input type="password" id="actualPassword" name="actualPassword" class="form-control form-control-lg" />
+                        <label class="form-label" for="actualPassword">Actual Password</label>
+                      </div>
+    
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 mb-4 pb-2">
+    
+                      <div class="form-outline">
+                        <input type="password" id="password" name="password" class="form-control form-control-lg" />
+                        <label class="form-label" for="password">New Password</label>
+                      </div>
+    
+                    </div>
+                  </div>
+    
+
+    
+                  <div class="mt-4 pt-2">
+                    <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
+                  </div>
+    
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <%- include("partials/footer") %>
     <script
