--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -23,7 +23,12 @@
           <div class="col-12 col-lg-9 col-xl-7">
             <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
               <div class="card-body p-4 p-md-5">
-                <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Edit Profile</h3>
+                <div class="d-flex justify-content-between">
+                  <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Edit Profile</h3>
+                  <form method="POST" action="/usuarios/<%=user.id%>/?_method=DELETE">
+                    <button type="submit" class="btn btn-danger btn-lg">Delete profile</button>
+                  </form>
+                </div>
                 <% if (messages.perms) { %>
                   <div class="alert alert-danger"><%= messages.perms %></div>
                   <% } %>
@@ -87,6 +92,7 @@
                   </div>
     
                 </form>
+                
               </div>
             </div>
           </div>
